tests/fixtures/syntax/valid/write_step_string_literal_trailing_comment.repor
case "write step string literal trailing comment" {
  write "expected/stdout.txt" "hello" # comment
  $ true
  assert {
    exit 0
  }
}
