tests/fixtures/syntax/invalid/write_step_opening_fence_inline_comment.repor
case "write step opening fence inline comment is rejected" {
  write <"a.txt"> ``` # comment
    hello
    ```
  $ true
  assert {
    exit 0
  }
}
